[package]
name = "netty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netty_stack"
path = "src/bin/main.rs"

[lib]
name = "netty"
path = "src/lib.rs"

[dependencies]
byteorder = "1.4"
libc = "0.2"
netdevice = "0.1"
num-derive = "0.3"
num-traits = "0.2"
nix = "0.23"
tokio = { version = "1.16", features = ["full"] }
tokio-tun = "0.5.1"