[package]
name = "netty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netty_stack"
path = "src/bin/main.rs"

[lib]
name = "netty"
path = "src/lib.rs"

[dependencies]
byteorder = "1.4"
futures = "0.3"
num-derive = "0.3"
num-traits = "0.2"
rtnetlink = "0.9"
tokio = { version = "1.16", features = ["full"] }
tokio-tun = "0.5.1"
