[package]
name = "netty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netty_stack"
path = "src/bin/main.rs"

[lib]
name = "netty"
path = "src/lib.rs"

[dependencies]
array-init = "2.0"
async-channel = "1.6"
atomic = "0.5"
byteorder = "1.4"
futures = "0.3"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rtnetlink = "0.9"
tokio = { version = "1.16", features = ["full"] }
tokio-tun = { path = "../tokio-tun" }
